<resources>
    <string name="app_name">Profiler</string>
    <string name="title_home">Home</string>
    <string name="title_dailycalorie">Daily Calorie</string>
    <string name="title_goaltracker">Goal Tracker</string>
    <string name="title_bmi">BMI Calculator</string>
    <string name="camera">Camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_name">Food name:</string>
    <string name="image">Image</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="calorie_calculator">Calorie Calculator</string>

    <string name="logout_button_text">LOGOUT</string>
    <!-- Login form -->
    <string name="login_button_text">LOGIN</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">ex. Abc123Xyz</string>
    <string name="giveinput">You must input weight and height..</string>

    <!-- Register form -->
    <string name="register_title">Register Here:</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="password_regex">^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$</string>

    <!-- Forgot Password-->
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_reset_instruction">Type your email below to get a reset link.</string>
    <string name="send_email">Send</string>


    <string-array name="exercise_dropdown">
        <item>Walking</item>
        <item>Running</item>
        <item>Swimming</item>
        <item>Cycling</item>
    </string-array>

    <string-array name="history_dropdown">
        <item>7 days</item>
        <item>1 month</item>
        <item>6 months</item>
    </string-array>

    <string name="google_web_client_id">567034059592-2f7iasp3srgum77j8t2o2iplugq953q2.apps.googleusercontent.com</string>

    <string name="propic">iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAMAAADDpiTIAAAAA3NCSVQICAjb4U/gAAAACXBIWXMAAKSzAACkswHURojFAAAAGXRFWHRTb2Z0d2FyZQB3d3cuaW5rc2NhcGUub3Jnm+48GgAAAwBQTFRF////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACyO34QAAAP90Uk5TAAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8gISIjJCUmJygpKissLS4vMDEyMzQ1Njc4OTo7PD0+P0BBQkNERUZHSElKS0xNTk9QUVJTVFVWV1hZWltcXV5fYGFiY2RlZmdoaWprbG1ub3BxcnN0dXZ3eHl6e3x9fn+AgYKDhIWGh4iJiouMjY6PkJGSk5SVlpeYmZqbnJ2en6ChoqOkpaanqKmqq6ytrq+wsbKztLW2t7i5uru8vb6/wMHCw8TFxsfIycrLzM3Oz9DR0tPU1dbX2Nna29zd3t/g4eLj5OXm5+jp6uvs7e7v8PHy8/T19vf4+fr7/P3+6wjZNQAAE3JJREFUGBntwQmAznX+B/D388wzzzAGucs11pEc0aGWf7bQGsZfslZWuaZjbWwraUmRwiJkiehfE2bRhr91rM0f/1g7chSNilitnGNkzema+3nvlqwcw/M88zu+v9/383oBmvHExg14ZuSEmfOXrdv6xaH0/Pz0Q19sXbds/swJI58ZEBfrgXCr8q36jFv6+Xle1/nPl47r06o8hJt4Wz371sY0hiBt41vPtvJCOJ+n+ZCVWQxL1sohzT0QDtZw4OKTLJWTiwc2hHCiKv2TjtIQR5P6V4FwFH+PlQU0UMHKHn4Ip2g9J4OGy5jTGsIBYkfvp0n2j46FUFqFJzYFaKLApicqQKiq5vRzNN256TUhVBQ7J4+WyJsTC6GaRvMKaZnCeY0gVNL8j8W0VPEfm0Oo4u7lAVousPxuCBU0W0ObrGkGYbeYqYW0TeHUGAhbPZJKW6U+AmGfRutou3WNIOxRdnweFZA3viyEDboepCIOdoWwWuwqKmRVLISlemZTKdk9IawT9SaV82YUhEUafEoFfdoAwhKP5FBJOY9AmC9qNpU1OwrCZA1TqLCUhhCm6pVDpeX0gjCPZyqVN9UDYRLfAjrAAh+EKaLX0BHWREOYoPI2OsS2yhCGq7OXjrG3DoTBmhylgxxtAmGo1hl0lIzWEAaKP0eHORcPYZhfFNJxCntBGKRTAR2oIA7CED8+S0c6ey+EAZqk06FONYYotTpH6VhHakGUUpW9dLA9lSBKpdx2OtqWshClELmWDrfaBxE2z3t0vCSIsE2jC0yECFMPusJDEGGpl0VXyKgLEYbIj+kSW30QoZtG15gCEbKudI9AF4gQ1cmgi5yqDRES30d0lc0REKGYRJeZABGCTgG6TCAOImhV/0nX+WdViGDNowvNgwjSfQG6UOA+iKD4vqArfeGDCMbzdKnnIYJQ+wxd6kxtiBtbRtdaBnFD8XSxeIgbKPM1XezrMhDXN46uNg7iuhrl0dXyGkFczxK63BKI62hcTJcrvhWiZEl0vfkQJapXSNcriIUoyRxqYDZECW7JowZyb4a4tmnUwlSIa6p6llo4UxniWn5HTYyFuIaK2dREZnmIq71EbbwAcZWIE9TGcS/EleKpkTiIK71PjSyCuEKF89TIufIQl3uSWnkc4nJ/o1b+CnGZegFqJRAL8UOjqZlRED/0FTWzH+IHWlM7rSEumUPtzIH4D38GtZPhh7ioPTXUHuKi8dTQeIiLtlBDWyC+F1NADRXEQFwQTy3FQ1wwlVqaCnHBTmppJ8R3KhVTS8WVIL7VnZrqDvGtmdTUTIhv7aGm9kD8Ww1qqwYE0I3a6gYBDKe2hkMAc6mtdyGAj6itzRDAKWrrFAQqU2OVIdpQY20gHqfGEiBeo8YmQaygxpZD7KXGvoT2IvKpsfwI6K4htdYAumtDrbWG7uKotY7QXQ9qrQd0N4BaGwDdPUOtPQPdvUitvQjdTaTWJkJ3s6i1WdBdErWWBN0to9aWQXfrqLV10N1Wam0rdLebWtsN3e2i1nZBd8nUWjJ09wG19gF0t5haWwzdvUutvQvdTafWpkN346i1cdDdcGptOHT3NLX2NHTXh1rrA911o9a6QXcdqLUO0N091No90N3N1NrN0F4ONZYD8Qk19gnEQmpsIcQoamw0RE9q7BGI26mxFhBliqmtQFkIHKK2DkMAa6mttRDADGrrDQhgELU1GAJ4gNpqDwGUzaOm8qMh/m0TNZUM8a0x1NSrEN9qS03dD/GtyLPU0jk/xHfWUkvrIS4YQS2NhLigFbV0L8QF3ixqKCcC4nsrqaE/Q1w0hBoaCnFRc2qoBcR/7KN29kNc8iK1MwrikjrF1EwgFuIHNlAzf4X4oQHUzOMQPxRzjlo5Vx7iMguplUUQl+tIrcRBXM6bSo0c90JcYTI1MgXiSs2okeYQV9lBbeyAuFpPaqMnxNW8e6mJfV6Ia+hHTfSHuBbfQWrhkA/imn5FLTwNcW3+VGogLQqiBEOpgWEQJYn+J10vvRxEiV6k642GKFmFLLpczk0Q1zGWLjcB4nrKHaWrHS8PcV096Gq9IG5gDV1sHcSN1M+la+U1hLihMXStVyFuLOorutSBMhBBiKNLdYIIyhK60v9CBKfWabrQmVoQQXqOLjQMIli+7XSd7T6IoNXLostk1YMIQXe6THeIkLxBV3kDIjT+HXSRHX6IENXPpmtk14cIWU+6Rk+IMMymS8yGCEdUCl0hJQoiLA1P0wVON4QIU9dCOl5hV4iwJdDxEiBKYQQdbgREqUyjo02DKB3PAjrYAg9EKfnW0LHW+CBKLXobHWpbNIQBKu+lI+2tDGGI2kfpQEdrQxjk1iN0nCO3Qhim1h46zJ5aEAaqtIWOsqUShKHKrqaDrC4LYTDffDrGfB+E8SbTISZDmGJYgA4QGAZhkn6FVF5hPwjTdM6k4jI7Q5godjuVtj0WwlSR06iwaZEQZuuWSUVldoOwQN1tVNK2uhCWiHydCno9EsIqD2VQMRkPQVio7lYqZWtdCEt5B2VSGZmDvBBWq5YUoBICSdUg7ND2Cyrgi7YQBvM80RLB8D13mjY7/ZwPwWjVzwMRpDY7ePI2BKXmYtpqcU0E5fYMbrsHIhi3LAyQTP0RgvPTv9M2f/8pgnPrNyQD86tD3Ij3Nzn8zsHaCI5/yDHa4tgQP4JT7yi/k/W0F+K6Wu3kRYcaIEj+pw7Qcgee8iNIjY/xoo/vhChZhVnFvCStGYIV0edLWurLPhEIVouTvKRoRnmIEvwijZdJvxtB8/T4lJb5tIcHQftxJi9z/BGIa2m4jlfK+QlC0PkjWuKjzghBuzO80toGEFfyv5zLq53rhFA8sLqQJitc/QBC0SWXV8t92Q9xmbv28pryeyAk1Yem0EQpQ6sjJD0LeE1774K4xDuygCUo6ocQNZ9ynKY4PqU5QjSgiCUoGOmF+F5sMksWGIxQeeMWnaPBzi2K8yJUvw6wZMmxEN/pl8PregGhi0nYWEzDFG9MiEHoRvK6cvpBAJWW8EYmehCGSt1n7qEB9szsXglh8EzkjSypBO09mMobW30TwlOj9zsHWAoH3uldA+GptJo3lvog9Bb1+wCD8fUdCFvdhAWpDEPqgoS6CNudBxmMwO+joLF6uxik3MdRGrGdhszZkMogpW6YM6RTLErjyVwGaVc9aKtjOoP3ThRKK+aux8Yu3nWOJTq3a/HYx+6KQWmVmcvgpXeEpkYUMRQ768EQnoq1b7unw8N9B40YN/3dJUvenT5uxKC+D3e457baFT0wRP0UhqJoBHRUbglDlNEZjtA1iyFaUg7aabCbISt+1QvleScEGLLdDaCZ+CyG4/8qQ3HVPmQ4suKhE8+oYobncDsoreMxhqd4lAfaKLec4ZtfBcqq/h7Dt7wcNFHtE5ZGegLU5PllJkvjk2rQQv1/sJT+2hgKarqZpfTVj6CBu75hqeW9EgXFlPldAUvtxB1wvY5naIS/t4NSOh6gEU4/CJfrW0CDzK8CZVR/jwbJ7w1XGx6gYdITPFCC55eZNExgKNzLM4OG+uznHtjO22s3DTXFA5fyL6bRdv/CC1tFPLaXRlvggytFrqQJ9vWNgG0i+u+nCZZGwIV8y2mOrxJ8sIXviQM0x/sRcB3fMprm4C8jYTn/wEM0zXsRcJmIJTTTkUFRsFTUoCM000IvXCXifZos7bUmsEzT19JosiQvXMT7Hi3wyTNVYIGqv9lBC8zzwDW8C2iN/OXdI2Eq/89WFtAaiR64hDeJ1jk1qxVMc+/sDFrnbQ/c4W1a68sXasEEdV7cR2vNhCu8TMsV75zSuRwMFNPl9ZQALTccLjCA9ijYPPYBPwwQ1X78lkLaItAbjtexgPY5v37kvREoBV/rlzbk0j5598PhWubQZtl/fr7zj7wImbd+l+F/OU2bZTaFo9VJpRJydy+b0O/eigjKTT8eMPFPe/KohMO3wMEq7qZSvvnbO8MeatuyfvWyuErZ6g1atu3228Tkk1RKSgwcy7+RqirKOrb34w9XLJwzZ+GKDz/eeyyriKpa64NDeRZRGGAuHGo8hSFGwZG6BSgMUdwZDtQwm8IgGfXgONGfUxgmpQycZiGFgebBYQZTGGogHKV1PoWh8u6Fg1Q7RmGwo1XhGBEbKAz3YQScYhKFCSbBIeICFCYIxMERKh+nMEVqJTjBEgqTvA8H6ENhmt5QXp0sCtNk1oLiPBsoTLTOA7UNpTDVr6G0prkUpjp3KxQWmUJhso99UNdECtONgbLuKqIwXWFzKMrzMYUFkqGogRSW6A8lVc2gsMTJm6CieRQWmQMF3RegsEhxKyjH9zmFZXZ4oZrnKCw0CIqpeZrCQpnVoZbFFJZKglIepLBYWyjEk0JhsW1QyKMUlvsZlBH5NYXl9kVAFc9Q2OApKCLmJIUNUstCDa9Q2OIFKKH6GQpbZFWCCmZS2GQKFFC/gMImubVhv/cobDMXtmsZoLBN0W2w22IKGyXBZvWLKGxUUAf2eovCVtNhqxq5FLY6Wxl2mkhhszGwUfksCpudioZ9hlPY7jewjT+NwnaHfbDLUxQK6AubePdTKGC3B/b4OYUS/hv2SKZQwnrYogmFGgL1YYcZFIp4DTYom0mhiJN+WK8/hTJ6wXpbKZSxEZa7nUIht8Jqb1Io5HVYLDqbQiHpUbDWExRKeQzW+oRCKcmw1B0UimkCK71OoZjfwUKeoxSK+QcsdB+Fcu6GdWZSKGcKLOM9QaGcIx5YpQOFgv4LVnmbQkFvwCK+dAoFpXlhjc4USmoHayRRKOl/YImobAolnfLBCg9TKKoTrDCXQlGzYYXjFIo6BAu0pFDWbTDfCxTKGgbzbaJQ1v/DdBUKKJSVXw5m60GhsG4w2zsUCnsLZjtGobDDMFlzCqU1hbmGUyjttzDXRgqlbYCpovMplJYfDTO1o1BcO5hpFIXiRsFMaygUtwYm8mRRKC7LA/M0o1BeM5hnIIXyBsI8f6BQ3h9gngMUyjsA09SgcIAaMEsPCgfoAbNMo3CAaTDLdgoH2A6T+PMpHCDfD3O0oHCEFjBHXwpH6AtzTKFwhCkwx1oKR1gLc6RROEIaTFGVwiGqwgztKRyiPczwLIVDPAszzKVwiLkwww4Kh9gBE3jPUzjEeS+M15jCMRrDeD0pHKMnjDeawjFGw3gLKRxjIYw3hsIxxsB4npUUDrHSAxPEfEbhCJ/FwBQ1j1I4wNGaMEnzbArlZTeHaToUUCiuoANM1I9Ccf1gqlEUShsFkyVSKCwRZvOtoVDWGh9MF5NCoaiUGFjgliMUSjpyCyzRNItCQVlNYZF2+RTKyW8HyzwaoFBM4FFY6FcUivkVLDWUQilDYbGRFAoZCcuNpVDGWNhgCoUipsAWMymUMBP28CRSKCDRA5t4F1LYbqEXtolYSmGzpRGwUeQqClutioStotZS2GhtFGxWdj2FbdaXhe2illPY5E9+KCDiDxS2mB8BJXhmUthghgeqGE9huVehkOcprBUYCqU8VUxhoaIEKKZXAYVl8ntAOfHnKSxytiMU9JMcCktktYGS7j5FYYFvWkBRtx2kMN0/GkJZ1T6iMNmmylBY1EIKU82LhNpGBShMExgB5fU8T2GSs93hAK3SKEyReiccoXYKhQl21oRDlFtBYbg/RcMxPJMpDDbJAyd5PJ/CQPkJcJj7T1IY5uT9cJyayRQGSa4JB/JNDlAYIDDZB2d6KJOi1DIfgmPV20FRSjvqwcH8sylKZbYfztb7DEXYzvSG4zXeTRGm3Y3hAtFJFGFJioY7PJlLEbLcJ+EaTXdShGhnU7iI79VCihAUjPHBXe7+kiJou++E60RNLaYIStFrfrhR2wMUQdjfBi5Vbg7FjQTeKAv3ijtGcV2H2sHVblpAcR3vlIfbdT9BUYJj8dBAhRlFFNdQMLkc9NBiM8VVNjaBPvp/Q3GZtEehlYoziyj+o/D35aGbllsovpd8OzTkSThJ8W/f9IOmbnqziNormlUR+rozmZpLvgN66/IZNfZZF2jP89jX1NTXj3kggMjBJ6ihE4MjIS4o91I2NZP9UjmISypPzaVGcqdWhrhcrcQiaqIosRbE1RovKaYGipc0hri2Rm/n0eXy3m4EUbIaE7PoYlkTa0BcX/lhx+hSx4aVh7ixyAF76EJ7BkRCBMfTNZkuk9zVAxGC1isCdI3AitYQoao/MY2ukDaxPkQ4fN0/KKbDFX/Q3QcRtjqvHKGDHXmlDkTpeOOXF9KRCpfHeyEMcPPIA3ScAyNvhjCKp8OCbDpI9oIOHghD+bsmZdERspK6+iFM4O8yP5OKy5zfxQ9hmsjOczOorIy5nSMhTOaLS0yngtIT43wQlvC1n7SzmAop3jmpvQ/CSlV6JR6mEg4n9qoCYYdGg1dk01bZKwY3grBRRJsxmwtpi8LNY9pEQNivfPvhSw/RUgeXDm9fHkIhVTu//OcTtEDaqtGdq0IoqVb3CeszaZr0teMfrgmhuNiOg2d88FUhDVT41V+mD/ppXQjn8DXqMnT2+sPFLJXiw+tnP9uloQ/CoaKaxieMmLZo/ecnihi0ohOfr180bURCfNMoCLfwVG3WvveQCbMSFyxdtW7T9l37Dh7POFtUdDbj+MF9u7ZvWrdq6YLEWROG9G7frKoH2vgX+rLSwrFZk6IAAAAASUVORK5CYII=</string>

</resources>